# turboquant-plus-mlx

./: .gitignore  README.md  pyproject.toml
tests/: test_adaptive_orchestrator.py  test_advanced_kv_cache.py  test_bit_budget.py  test_moe_compression.py  test_temporal_decay.py
tests/test_mlx/: test_adaptive_parity.py  test_mlx_lm_integration.py  test_parity.py
turboquant/: __init__.py  adaptive_bits.py  adaptive_kv_cache.py  bit_budget.py  codebook.py  kv_cache.py  moe_compression.py  outlier.py  polar_quant.py  qjl.py  rotation.py  temporal_decay.py  turboquant.py  utils.py
turboquant/backend/: __init__.py  _protocol.py  mlx_backend.py  numpy_backend.py
turboquant/integrations/: __init__.py  mlx_lm.py
turboquant/mlx/: __init__.py  adaptive_kv_cache.py  codebook.py  kv_cache.py  outlier.py  polar_quant.py  qjl.py  rotation.py  temporal_decay.py  turboquant.py  utils.py
turboquant/mlx/kernels/: hadamard.metal  quantize.metal  requantize.metal
